# yarp-ros

./: CMakeLists.txt  README.md
.github/workflows/: conda-ci.yml
cmake/: YarpFindDependencies.cmake  YarpPlugin.cmake
example/idl/rosPortable/: CMakeLists.txt
src/: CMakeLists.txt
src/carriers/: CMakeLists.txt
src/libYARP_rosmsg/src/: CMakeLists.txt
src/yarpidl_rosmsg/: CMakeLists.txt
tests/misc/: check_style_skip.txt
